# fiction

./: Makefile  README.md  pyproject.toml  requirements.txt  strip_yago.py  yago2dataset.py
fiction/: filter_facts.py  gen_description.py  gen_new_facts.py  utils.py  yago_rel_desc.csv  yago_rel_desc.py
fiction/tlogic/: learn.py  rule_application.py  rule_learning.py  temporal_walk.py
fiction/yagottl/: schema.py
