[project]
# Future trIples extracTION
name = "fiction"
version = "0.1.0"
description = ""
authors = [{ name = "Arthur Amalvy", email = "arthur.amalvy@univ-avignon.fr" }]
requires-python = ">=3.9,<3.11"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes<0.42",
    "joblib>=1.5.0",
    "more-itertools>=10.7.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scienceplots>=2.1.1",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = []
